style: fixed gap issue

--- a/src/routes/Login/login.module.scss
+++ b/src/routes/Login/login.module.scss
@@ -14,7 +14,7 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    gap: 0.5;
+    gap: 0.5rem;
     position: relative;
 
     @media screen and (max-height: 545px) {
@@ -47,7 +47,7 @@
 
     .loginContainer {
         width: clamp(20rem, 80vw, 62rem);
-        height: clamp(1.6578rem, 90%, 39rem);
+        height: clamp(1.6578rem, 90%, 45rem);
         position: absolute;
         bottom: 0;
         filter: drop-shadow(0px 6px 10.5px rgba(0, 0, 0, 0.15));
